// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Team renders Team 1`] = `
<div>
  <div>
    <div
      class="sc-lhVmIH enxJan"
    >
      <div
        class="sc-bYSBpT bdgTKs"
      >
        <div
          class="sc-kafWEX doqriu"
        >
          <a
            class="sc-feJyhm bzbyYc"
          >
            <img
              class="sc-iELTvK kXWcVM"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-cmTdod gUTeYg"
          >
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-jwKygS fTIVRr"
            />
          </div>
        </div>
        <div
          class="sc-elJkPf kqIJd"
        >
          <h1
            class="sc-jtRfpW gYccdl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-gxMtzJ dgqXJX"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-kTUwUJ kKOBIo"
          >
            Cookie M
          </div>
          <div
            class="sc-dqBHgY ouKpq"
          >
            Cookie master
          </div>
          <div
            class="sc-dfVpRl iBAACS"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-gxMtzJ dgqXJX"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-kTUwUJ kKOBIo"
          >
            Count van Count
          </div>
          <div
            class="sc-dqBHgY ouKpq"
          >
            1 ahahah
          </div>
          <div
            class="sc-dfVpRl iBAACS"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using keyboard 1`] = `
<div>
  <div>
    <div
      class="sc-lhVmIH enxJan"
    >
      <div
        class="sc-bYSBpT bdgTKs"
      >
        <div
          class="sc-kafWEX doqriu"
        >
          <a
            class="sc-feJyhm bzbyYc"
          >
            <img
              class="sc-iELTvK kXWcVM"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-cmTdod gUTeYg"
          >
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-jwKygS fTIVRr"
            />
          </div>
        </div>
        <div
          class="sc-elJkPf kqIJd"
        >
          <h1
            class="sc-jtRfpW gYccdl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-gxMtzJ dgqXJX"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-kTUwUJ kKOBIo"
          >
            Count van Count
          </div>
          <div
            class="sc-dqBHgY ouKpq"
          >
            1 ahahah
          </div>
          <div
            class="sc-dfVpRl iBAACS"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using mouse 1`] = `
<div>
  <div>
    <div
      class="sc-lhVmIH enxJan"
    >
      <div
        class="sc-bYSBpT bdgTKs"
      >
        <div
          class="sc-kafWEX doqriu"
        >
          <a
            class="sc-feJyhm bzbyYc"
          >
            <img
              class="sc-iELTvK kXWcVM"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-cmTdod gUTeYg"
          >
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-jwKygS fTIVRr"
            />
          </div>
        </div>
        <div
          class="sc-elJkPf kqIJd"
        >
          <h1
            class="sc-jtRfpW gYccdl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-gxMtzJ dgqXJX"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-kTUwUJ kKOBIo"
          >
            Cookie M
          </div>
          <div
            class="sc-dqBHgY ouKpq"
          >
            Cookie master
          </div>
          <div
            class="sc-dfVpRl iBAACS"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should not change using keyboard if not enter or space key 1`] = `
<div>
  <div>
    <div
      class="sc-lhVmIH enxJan"
    >
      <div
        class="sc-bYSBpT bdgTKs"
      >
        <div
          class="sc-kafWEX doqriu"
        >
          <a
            class="sc-feJyhm bzbyYc"
          >
            <img
              class="sc-iELTvK kXWcVM"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-cmTdod gUTeYg"
          >
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-btzYZH kmRwNW"
              aria-current="false"
            >
              Om
            </a>
            <div
              class="sc-jwKygS fTIVRr"
            />
          </div>
        </div>
        <div
          class="sc-elJkPf kqIJd"
        >
          <h1
            class="sc-jtRfpW gYccdl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-gxMtzJ dgqXJX"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-kTUwUJ kKOBIo"
          >
            Cookie M
          </div>
          <div
            class="sc-dqBHgY ouKpq"
          >
            Cookie master
          </div>
          <div
            class="sc-dfVpRl iBAACS"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-gxMtzJ dgqXJX"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-kTUwUJ kKOBIo"
          >
            Count van Count
          </div>
          <div
            class="sc-dqBHgY ouKpq"
          >
            1 ahahah
          </div>
          <div
            class="sc-dfVpRl iBAACS"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
